--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
 	                </a>
 	            </div>
 	            <div class="col-sm-6 col-md-4">
-	                <a class="lightbox" href="image/photo15.jpg">
-	                    <img src="image/photo15.jpg" alt="Sky">
+	                <a class="lightbox" href="image/photo15.JPG">
+	                    <img src="image/photo15.JPG" alt="Sky">
 	                </a>
 	            </div>
 	            <div class="col-sm-6 col-md-4">
